revert to classical user

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,11 +9,10 @@ services:
     volumes:
       - ./jellyfin/config:/config
       - ./jellyfin/cache:/cache
-      - /media/reaster/big-chungus/media:/media
-    # user: "root:root"
+      - ./media:/media
     environment:
-      - PGID=0
-      - PUID=0
+      - PGID=1000
+      - PUID=1000
       - TZ=Europe/London
     ports:
       - 8096:8096
@@ -50,6 +49,8 @@ services:
     environment:
     # - LOG_LEVEL=debug
     - TZ=Europe/London
+    - PGID=1000
+    - PUID=1000
     ports:
       - 5055:5055
     volumes:
@@ -64,13 +65,12 @@ services:
     ports:
       - "7878:7878"
     environment:
-      - PGID=0
-      - PUID=0
+      - PGID=1000
+      - PUID=1000
       - TZ=Europe/London
     volumes:
       - ./radarr:/config
-      - /media/reaster/big-chungus/media:/library
-    # user: "root:root"
+      - ./media:/library
 
   sonarr:
     image: linuxserver/sonarr:latest
@@ -79,13 +79,12 @@ services:
     ports:
       - "8989:8989"
     environment:
-      - PGID=0
-      - PUID=0
+      - PGID=1000
+      - PUID=1000
       - TZ=Europe/London
     volumes:
       - ./sonarr:/config
-      - /media/reaster/big-chungus/media:/library
-    # user: "root:root"
+      - ./media:/library
     
   prowlarr:
     image: linuxserver/prowlarr:develop
@@ -96,8 +95,8 @@ services:
     cap_add:
       - NET_ADMIN
     environment:
-      - PGID=0
-      - PUID=0
+      - PGID=1000
+      - PUID=1000
       - TZ=Europe/London
     volumes:
       - ./prowlarr:/config
@@ -112,16 +111,15 @@ services:
     #   - "51413:51413"
     #   - "51413:51413/udp"
     environment:
-      - PGID=0
-      - PUID=0
+      - PGID=1000
+      - PUID=1000
       - TZ=Europe/London
       - USER=admin #optional
       - PASS=admin #optional
     volumes:
       - ./transmission:/config
-      - /media/reaster/big-chungus/media:/library
+      - ./media:/library
       - watching:/watch
-    # user: "root:root"
     cap_add:
       - NET_ADMIN
     network_mode: service:protonwire
