--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -94,7 +94,30 @@ services:
     volumes:
       - ./prowlarr:/config
       - watching:/downloads  # transmission watch directory
+    
+  jackett:
+    image: linuxserver/jackett:latest
+    container_name: jackett
+    restart: always
+    ports:
+      - "9117:9117"
+    environment:
+      - PGID=1000
+      - PUID=1000
+      - TZ=Europe/London
+    volumes:
+      - ./jackett:/config
+      - watching:/downloads # transmission watch directory
   
+  flaresolverr:
+    image: flaresolverr/flaresolverr:latest
+    container_name: flaresolverr
+    restart: unless-stopped
+    environment:
+      - PGUID=1000
+      - PUID=1000
+      - TZ=Europe/London
+
   transmission:
     image: linuxserver/transmission:latest
     container_name: transmission
@@ -130,6 +153,7 @@ services:
       - OPENVPN_USER=$PROTON_VPN_USER
       - OPENVPN_PASSWORD=$PROTON_VPN_PASS
       - SERVER_COUNTRIES=Netherlands
+      - VPN_PORT_FORWARDING=on
       # - FREE_ONLY=yes
       - KILL_SWITCH=on
   
