--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,7 +20,7 @@ services:
     restart: unless-stopped
     volumes:
       - ./jellyfin/config:/config
-      - ./jellyfin/cache:/cache
+        #- ./jellyfin/cache:/cache
       - ../media:/media
     environment:
       - PGID=1000
@@ -95,19 +95,19 @@ services:
       - ./prowlarr:/config
       - watching:/downloads  # transmission watch directory
     
-  jackett:
-    image: linuxserver/jackett:latest
-    container_name: jackett
-    restart: always
-    ports:
-      - "9117:9117"
-    environment:
-      - PGID=1000
-      - PUID=1000
-      - TZ=Europe/London
-    volumes:
-      - ./jackett:/config
-      - watching:/downloads # transmission watch directory
+  # jackett:
+  #   image: linuxserver/jackett:latest
+  #   container_name: jackett
+  #   restart: always
+  #   ports:
+  #     - "9117:9117"
+  #   environment:
+  #     - PGID=1000
+  #     - PUID=1000
+  #     - TZ=Europe/London
+  #   volumes:
+  #     - ./jackett:/config
+  #     - watching:/downloads # transmission watch directory
   
   flaresolverr:
     image: flaresolverr/flaresolverr:latest
