--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,7 +15,7 @@ services:
       - ./nginx-proxy-manager/letsencrypt:/etc/letsencrypt
 
   jellyfin:
-    image: jellyfin/jellyfin:unstable
+    image: jellyfin/jellyfin:20231110.9-unstable
     container_name: jellyfin
     restart: unless-stopped
     volumes:
@@ -35,6 +35,8 @@ services:
         reservations:
           devices:
             - capabilities: [gpu]
+    labels:
+      - "com.centurylinklabs.watchtower.enable=false"
 
   jellyseer:
     image: fallenbagel/jellyseerr
@@ -96,19 +98,19 @@ services:
       - ./prowlarr:/config
       - watching:/downloads  # transmission watch directory
     
-  # jackett:
-  #   image: linuxserver/jackett:latest
-  #   container_name: jackett
-  #   restart: always
-  #   ports:
-  #     - "9117:9117"
-  #   environment:
-  #     - PGID=1000
-  #     - PUID=1000
-  #     - TZ=Europe/London
-  #   volumes:
-  #     - ./jackett:/config
-  #     - watching:/downloads # transmission watch directory
+  jackett:
+    image: linuxserver/jackett:latest
+    container_name: jackett
+    restart: always
+    ports:
+      - "9117:9117"
+    environment:
+      - PGID=1000
+      - PUID=1000
+      - TZ=Europe/London
+    volumes:
+      - ./jackett:/config
+      - watching:/downloads # transmission watch directory
   
   flaresolverr:
     image: flaresolverr/flaresolverr:latest
@@ -162,6 +164,8 @@ services:
       - VPN_PORT_FORWARDING_PROVIDER=protonvpn
       # - FREE_ONLY=yes
       - KILL_SWITCH=on
+    labels:
+      - "com.centurylinklabs.watchtower.enable=false"
   
 volumes:
   watching:
